<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbl_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/main_amount"
        android:labelFor="@id/main_amountInput"/>

    <EditText
        android:id="@+id/main_amountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:digits="@string/valid_digits"
        android:autofillHints=""
        android:textAlignment="viewEnd"
        android:textSize="@dimen/numberSize"/>

    <TextView
        android:id="@+id/lbl_firstCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_firstCurr_radioGroup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/firstCurr_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/firstCurr_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/currency_dollar" />

            <RadioButton
                android:id="@+id/firstCurr_euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_euro" />

            <RadioButton
                android:id="@+id/firstCurr_pound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_pound" />

        </RadioGroup>

        <ImageView
            android:id="@+id/icon_firstCurr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_dollar"
            android:contentDescription="@string/currency_icon"/>

    </LinearLayout>

    <TextView
        android:id="@+id/lbl_secondCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_secondCurr_radioGroup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <RadioGroup
            android:id="@+id/secondCurr_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/secondCurr_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_dollar" />

            <RadioButton
                android:id="@+id/secondCurr_euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_euro" />

            <RadioButton
                android:id="@+id/secondCurr_pound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/currency_pound" />

        </RadioGroup>

        <ImageView
            android:id="@+id/icon_secondCurr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_pound"
            android:contentDescription="@string/currency_icon"/>

    </LinearLayout>

    <Button
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/main_button_name" />


</LinearLayout>